[package]
name = "baglama2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "*"
rusqlite = { version = "*", features = ["bundled"] }
mysql_async = "*"
tokio = { version = "^1", features = ["full", "rt-multi-thread"] }
futures = "*"
serde_json = "^1"
reqwest = { version = "*", features = ["gzip", "deflate", "brotli"] }
chronoutil = "*"
chrono = "*"
regex = "*"
lazy_static = "^1"
anyhow = "*"
tools_interface = { git = "https://github.com/magnusmanske/tools_interface" }
wikimisc = { git = "https://github.com/magnusmanske/wikimisc" }
log = "*"
base64 = "^0.22"

[profile.release]
opt-level = 3
lto = 'fat'
panic = 'abort'
codegen-units = 1
