[package]
name = "baglama2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rusqlite = { version = "0.31", features = ["bundled"] }
mysql_async = "0.36"
tokio = { version = "^1", features = ["full", "rt-multi-thread"] }
futures = "0.3"
serde_json = "^1"
reqwest = { version = "0.13", features = ["gzip", "deflate", "brotli"] }
chronoutil = "0.2"
chrono = "0.4"
regex = "1"
lazy_static = "^1"
anyhow = "1"
tools_interface = "*"
wikimisc = { git = "https://github.com/magnusmanske/wikimisc" }
log = "0.4"
base64 = "^0.22"

[profile.release]
opt-level = 3
lto = 'fat'
panic = 'abort'
codegen-units = 1
